fix spacings

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -953,7 +953,7 @@ Google map
 RSVP form
 ========================================================================== */
 .rsvp {
-  padding-bottom: 140px;
+  padding-bottom: 40px;
 
   .rsvp-form {
     .rsvp-btn {
